Various CSS Changes to make things fluid...

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 			}
 			nav ul {
 				list-style-type: none;
-				height: 55px;
+				height: 4.511895%;
 			}
 			nav li {
 				float: left;
-				width: 185px;
+				width: 18.974359%;
 				text-align: center;
 				margin: 15px 0;
 			}
@@ -97,9 +97,9 @@
 			}
 			#container {
 				background: #FFFFFF;
-				width: 1000px;
+				width: 73.206442%;
 				margin: 0px auto;
-				padding: 20px 25px;
+				padding: 1.64338537% 2.43902439%;
 				
 				-webkit-border-radius: 10px;
 				-moz-border-radius: 10px;
@@ -114,14 +114,13 @@
 			}
 			#mainHeader img {
 				display: inline;
+				width: 10.2564103%;
 			}
 			#mainHeader img.leftImg {
 				float: left;
-				width: 100px;
 			}
 			#mainHeader img.rightImg {
 				float: right;
-				width: 100px;
 			}
 			#mainHeader h1{
 				display: inline;
@@ -136,14 +135,14 @@
 			}
 			#leftColumn {
 				display: inline-block;
-				width: 150px;
+				width: 15.3846154%;
 			}
 			#leftColumn article {
 				margin: 20px 0;
 			}
 			#middleColumn {
 				display: inline-block;
-				width: 600px;
+				width: 61.5384615%;
 			}
 			#leftMiddleContent, #rightMiddleContent {
 				display: inline-block;
@@ -151,12 +150,12 @@
 			}
 			#rightColumn {
 				display: inline-block;
-				width: 200px;
+				width: 20.5128205%;
 			}
 			#mainFooter {
 				background: #000;
 				color: #FFF;
-				padding: 15px 0;
+				padding: 1.53846154% 0;
 				font-size: 2.5em;
 				
 				-webkit-border-bottom-left-radius: 10px;
